cmake_minimum_required(VERSION 3.2.2)

project(VisualizationBase)
include(../CMake/common.cmake)

add_library(VisualizationBase SHARED
	src/overlays/IconOverlayStyle.h
	src/overlays/IconOverlay.h
	src/overlays/BoxOverlayStyle.h
	src/overlays/BoxOverlay.h
	src/overlays/OverlayAccessor.h
	src/overlays/ZoomLabelOverlay.h
	src/overlays/SelectionOverlay.h
	src/overlays/Overlay.h
	src/overlays/OverlayGroup.h
	src/items/EmptyItem.h
	src/items/VUsedLibraryStyle.h
	src/items/VUsedLibrary.h
	src/styles/StyleProperty.h
	test/DeclarativeTestStyle.h
	src/declarative/DeclarativeItemBaseStyle.h
	src/items/VCompositeStyle.h
	src/items/VComposite.h
	src/declarative/DeclarativeItemDef.h
	src/declarative/VisualizationItemWrapperFormElement.h
	src/declarative/NodeWithVisualizationItemWrapperFormElement.h
	src/declarative/NodeItemWrapperFormElement.h
	src/declarative/ItemWrapperFormElement.h
	src/declarative/SequentialLayoutFormElement.h
	src/declarative/GridLayoutFormElement.h
	src/declarative/AnchorLayoutFormElement.h
	src/declarative/LayoutFormElement.h
	src/declarative/ShapeFormElement.h
	src/declarative/FormElement.h
	src/items/NodeWrapper.h
	src/declarative/Enumerations.h
	src/nodes/TestBoxNode.h
	src/items/TestBox.h
	src/items/LineStyle.h
	src/items/Line.h
	src/declarative/AnchorLayoutConstraintSolver.h
	src/declarative/AnchorLayoutAnchor.h
	test/DeclarativeTest.h
	src/declarative/DeclarativeItem.h
	src/declarative/DeclarativeItemBase.h
	src/items/Mipmap.h
	src/items/VisualizationAddOn.h
	src/shapes/SvgShapeStyle.h
	src/shapes/SvgShape.h
	src/items/RootItem.h
	src/renderer/ModelRenderer.h
	src/renderer/VisualizationGroup.h
	src/renderer/VisualizationSuitabilityScore.h
	src/CustomSceneEvent.h
	src/InteractionHandler.h
	src/Scene.h
	src/VisualizationException.h
	src/VisualizationManager.h
	src/cursor/Cursor.h
	src/cursor/CursorShapeItem.h
	src/cursor/LayoutCursor.h
	src/cursor/TextCursor.h
	src/icons/Icon.h
	src/icons/IconStyle.h
	src/icons/SVGIcon.h
	src/icons/SVGIconStyle.h
	src/items/Item.h
	src/items/ItemMacros.h
	src/items/ItemRegion.h
	src/items/ItemStyle.h
	src/items/ItemWithNode.h
	src/items/LayoutProvider.h
	src/items/LayoutProviderBase.h
	src/items/SceneHandlerItem.h
	src/items/Static.h
	src/items/StaticStyle.h
	src/items/Symbol.h
	src/items/SymbolStyle.h
	src/items/Text.h
	src/items/TextRenderer.h
	src/items/TextStyle.h
	src/items/VBoolean.h
	src/items/VCharacter.h
	src/items/VFloat.h
	src/items/VInteger.h
	src/items/VList.h
	src/items/VListStyle.h
	src/items/VReference.h
	src/items/VText.h
	src/layouts/GridLayout.h
	src/layouts/GridLayoutStyle.h
	src/layouts/Layout.h
	src/layouts/LayoutStyle.h
	src/layouts/PositionLayout.h
	src/layouts/PositionLayoutStyle.h
	src/layouts/SequentialLayout.h
	src/layouts/SequentialLayoutStyle.h
	src/node_extensions/Position.h
	src/precompiled.h
	src/shapes/Box.h
	src/shapes/BoxStyle.h
	src/shapes/Braces.h
	src/shapes/BracesStyle.h
	src/shapes/Diamond.h
	src/shapes/DiamondStyle.h
	src/shapes/Shape.h
	src/shapes/ShapeStyle.h
	src/shapes/shapeMacros.h
	src/styles/Style.h
	src/styles/StyleLoader.h
	src/styles/StyleNode.h
	src/styles/StyleSet.h
	src/views/MainView.h
	src/views/MiniMap.h
	src/views/View.h
	src/visualizationbase_api.h
	src/nodes/UINode.h
	test/BoxTest.h
	src/renderer/VisualizationGroupsManager.h
	src/renderer/SzLevelOrderingManager.h
	src/node_extensions/FullDetailSize.h
	src/VisualizationBasePlugin.h
	src/declarative/GridLayouter.h
	src/declarative/DynamicGridFormElement.h
	src/overlays/MessageOverlay.h
	src/overlays/MessageOverlayStyle.h
	src/items/ViewItem.h
	src/nodes/ViewItemNode.h
	src/items/VViewItemNode.h
	src/overlays/ArrowOverlay.h
	src/utils/Drawing.h
	src/nodes/InfoNode.h
	src/items/VInfoNode.h
	src/ViewItemManager.h
	src/utils/JsonUtil.h
	src/overlays/ArrowOverlayStyle.h
	src/utils/InfoJavascriptFunctions.h
	src/overlays/IconOverlayStyle.cpp
	src/overlays/IconOverlay.cpp
	src/overlays/BoxOverlayStyle.cpp
	src/overlays/BoxOverlay.cpp
	src/overlays/ZoomLabelOverlay.cpp
	src/overlays/SelectionOverlay.cpp
	src/overlays/OverlayGroup.cpp
	src/items/EmptyItem.cpp
	src/items/VUsedLibraryStyle.cpp
	src/items/VUsedLibrary.cpp
	test/DeclarativeTestStyle.cpp
	src/declarative/DeclarativeItemBaseStyle.cpp
	src/items/VCompositeStyle.cpp
	src/items/VComposite.cpp
	src/declarative/SequentialLayoutFormElement.cpp
	src/declarative/GridLayoutFormElement.cpp
	src/declarative/AnchorLayoutFormElement.cpp
	src/declarative/ShapeFormElement.cpp
	src/declarative/FormElement.cpp
	src/items/NodeWrapper.cpp
	src/declarative/AnchorLayoutAnchor.cpp
	src/declarative/AnchorLayoutConstraintSolver.cpp
	test/DeclarativeTest.cpp
	src/declarative/DeclarativeItemBase.cpp
	src/nodes/TestBoxNode.cpp
	src/items/TestBox.cpp
	src/items/LineStyle.cpp
	src/items/Line.cpp
	src/items/Mipmap.cpp
	src/items/VisualizationAddOn.cpp
	src/shapes/SvgShapeStyle.cpp
	src/shapes/SvgShape.cpp
	src/items/RootItem.cpp
	src/renderer/ModelRenderer.cpp
	src/renderer/VisualizationGroup.cpp
	src/renderer/VisualizationSuitabilityScore.cpp
	src/items/ItemRegion.cpp
	src/CustomSceneEvent.cpp
	src/cursor/LayoutCursor.cpp
	src/cursor/TextCursor.cpp
	src/cursor/CursorShapeItem.cpp
	src/cursor/Cursor.cpp
	src/items/Static.cpp
	src/items/StaticStyle.cpp
	src/styles/Style.cpp
	src/styles/StyleNode.cpp
	src/styles/StyleLoader.cpp
	src/shapes/Braces.cpp
	src/shapes/BracesStyle.cpp
	src/layouts/GridLayout.cpp
	src/layouts/GridLayoutStyle.cpp
	src/shapes/Diamond.cpp
	src/shapes/DiamondStyle.cpp
	src/items/LayoutProviderBase.cpp
	src/items/Symbol.cpp
	src/items/SymbolStyle.cpp
	src/items/VCharacter.cpp
	src/items/VBoolean.cpp
	src/items/VFloat.cpp
	src/icons/SVGIconStyle.cpp
	src/icons/SVGIcon.cpp
	src/items/VReference.cpp
	src/icons/IconStyle.cpp
	src/icons/Icon.cpp
	src/items/VInteger.cpp
	src/layouts/PositionLayoutStyle.cpp
	src/layouts/PositionLayout.cpp
	src/node_extensions/Position.cpp
	src/items/SceneHandlerItem.cpp
	src/items/TextRenderer.cpp
	src/InteractionHandler.cpp
	src/views/MiniMap.cpp
	src/views/MainView.cpp
	src/views/View.cpp
	src/items/VListStyle.cpp
	src/items/VList.cpp
	src/items/Item.cpp
	src/items/ItemStyle.cpp
	src/layouts/LayoutStyle.cpp
	src/items/VText.cpp
	src/items/TextStyle.cpp
	src/items/Text.cpp
	src/shapes/BoxStyle.cpp
	src/shapes/ShapeStyle.cpp
	src/nodes/UINode.cpp
	test/BoxTest.cpp
	src/shapes/Box.cpp
	src/shapes/Shape.cpp
	src/layouts/Layout.cpp
	src/layouts/SequentialLayoutStyle.cpp
	src/layouts/SequentialLayout.cpp
	test/SimpleTest.cpp
	src/VisualizationManager.cpp
	src/VisualizationException.cpp
	src/Scene.cpp
	src/renderer/VisualizationGroupsManager.cpp
	src/renderer/SzLevelOrderingManager.cpp
	src/node_extensions/FullDetailSize.cpp
	src/VisualizationBasePlugin.cpp
	src/declarative/DynamicGridFormElement.cpp
	src/declarative/GridLayouter.cpp
	src/overlays/MessageOverlay.cpp
	src/overlays/MessageOverlayStyle.cpp
	src/items/ViewItem.cpp
	src/nodes/ViewItemNode.cpp
	src/items/VViewItemNode.cpp
	src/overlays/ArrowOverlay.cpp
	src/utils/Drawing.cpp
	src/nodes/InfoNode.cpp
	src/items/VInfoNode.cpp
	src/styles/StyleSet.cpp
	src/ViewItemManager.cpp
	src/utils/JsonUtil.cpp
	src/overlays/ArrowOverlayStyle.cpp
	src/utils/InfoJavascriptFunctions.cpp
	src/shapes/Frame.h
	src/shapes/FrameStyle.h
	src/shapes/Frame.cpp
	src/shapes/FrameStyle.cpp
)

if (WIN32)
    add_definitions(-DWIN32) # needed for lpsolve
endif (WIN32)
find_package(Qt5 REQUIRED Xml Svg PrintSupport)
target_link_libraries(VisualizationBase -llpsolve55 Qt5::Xml Qt5::Svg Qt5::PrintSupport)

envision_plugin(VisualizationBase ModelBase)